Tue May 13 12:05:44 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* freetds.conf src/apps/tsql.c src/tds/login.c:
	* src/tds/mem.c:
	- honour server default block size (improving performance on mssql)

Tue May 13 12:05:44 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/read.c: handle correctly ntext

Tue May 13 11:43:02 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/login.c: 
	- enable some useful socket options
	 - SO_LINGER: do a graceful close of socket (so server know 
	   you are disconnected)
	 - SO_KEEPALIVE: detect server crash

Tue May 13 10:57:44 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c: use only 16bit of LCID
	* src/tds/unittests/dataread.c: test tds7+ types (ntext fail)

Tue May 13 10:33:39 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/alternative_character_sets.h:
	* src/tds/character_sets.h:
	- add iso8859-7 (greek) charset

Mon May 12 22:52:34 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/iconv.c better logging of initialization failures

Mon May 12 20:57:22 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- fixed a bug that cause wire not readed converting from
	  larger-size string (like ucs2 -> iso8859-1)

Mon May 12 17:29:00 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: remove unused function

Mon May 12 17:17:14 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/moreandcount.c: improved

Mon May 12 10:52:55 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: rollback...

Mon May 12 07:53:05 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: improve TDS7+ dynamic

Sun May 11 10:34:07 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am:
	*  src/odbc/unittests/earlybind.c(added):
	- improve ODBC
	- added test for early binding
